Fix koe footer width to avoid horizontal scrolling

--- a/packages/core/src/components/exam/Exam.less
+++ b/packages/core/src/components/exam/Exam.less
@@ -19,6 +19,10 @@
       z-index: 5 !important;
     }
   }
+
+  .k-exam-footer {
+    margin: 0 !important;
+  }
 }
 
 #bertta .e-toc-and-exam {
